Fix user list styles on small screens

--- a/client/src/app/styles/media-queries.scss
+++ b/client/src/app/styles/media-queries.scss
@@ -1,5 +1,10 @@
 $mobile-breakpoint: 1000px;
+$prime-xl: 1200px;
 
 @mixin on-mobile {
   @media (screen and max-width: $mobile-breakpoint) { @content; }
+}
+
+@mixin prime-xl {
+  @media (screen and max-width: $prime-xl) { @content; }
 }
